--- a/test/fixtures/admis.yml
+++ b/test/fixtures/admis.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  username: MyString
+  email: MyString
   password: MyString
-  confirm_password: MyString
+  re_enterpassword: MyString
 
 two:
-  name: MyString
+  username: MyString
+  email: MyString
   password: MyString
-  confirm_password: MyString
+  re_enterpassword: MyString
